--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-825535
+  oakley
+Na nossa loja temos otimos proficionais desde vendedores de tenis até de roupas.
+temos os melhores preços dependendo do valor da compra damos até 8 porcento de desconto.
+  temos camisetas de primeira linha por : 150 reais 
+   camisa de segunda linha por:60 reais 
+   shorts de primeira linha por: 120 reais 
+   shorts de sgunda linha por: 50 reais 
+   tenis de primeira linha por apenas:500 reais 
+   tenis de segunda linha por apenas : 230 reais
+   e comprando qualquer uma dessas 
