--- a/index.html
+++ b/index.html
@@ -1,10 +1,23 @@
-  oakley
-Na nossa loja temos otimos proficionais desde vendedores de tenis até de roupas.
-temos os melhores preços dependendo do valor da compra damos até 8 porcento de desconto.
-  temos camisetas de primeira linha por : 150 reais 
-   camisa de segunda linha por:60 reais 
-   shorts de primeira linha por: 120 reais 
-   shorts de sgunda linha por: 50 reais 
-   tenis de primeira linha por apenas:500 reais 
-   tenis de segunda linha por apenas : 230 reais
-   e comprando qualquer uma dessas 
+ <!DOCTYPE html>
+ <html lang="pt-br">
+ <head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+ </head>
+ <body>
+  
+ </body>
+ </html>
+ <h1>oakley</h1>
+<p>Na nossa loja temos otimos proficionais desde vendedores de tenis até de roupas.<p>
+<p>temos os melhores preços dependendo do valor da compra damos até 8 porcento de desconto.<p>
+  <p>temos camisetas de primeira linha por : 150 reais<p>
+   <p>camisa de segunda linha por:60 reais <p>
+   <p>shorts de primeira linha por: 120 reais <p>
+   <P>shorts de sgunda linha por: 50 reais<p>
+  <p> tenis de primeira linha por apenas:500 reais <p>
+   <p>tenis de segunda linha por apenas : 230 reais<p>
+   <p>e comprando qualquer uma dessas roupas ou tenis<p>
+   <p>damos ate 5 porcento de desconto <p>
