--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   
  </body>
  </html>
- <h1>oakley</h1>
+ <h1><i>oakley<i></h1>
 <p>Na nossa loja temos otimos proficionais desde vendedores de tenis até de roupas.<p>
 <p>temos os melhores preços dependendo do valor da compra damos até 8 porcento de desconto.<p>
   <p>temos camisetas de primeira linha por : 150 reais<p>
