--- a/index.html
+++ b/index.html
@@ -11,13 +11,14 @@
  </body>
  </html>
  <h1><i>oakley<i></h1>
-<p>Na nossa loja temos otimos proficionais desde vendedores de tenis até de roupas.<p>
-<p>temos os melhores preços dependendo do valor da compra damos até 8 porcento de desconto.<p>
-  <p>temos camisetas de primeira linha por : 150 reais<p>
-   <p>camisa de segunda linha por:60 reais <p>
-   <p>shorts de primeira linha por: 120 reais <p>
-   <P>shorts de sgunda linha por: 50 reais<p>
-  <p> tenis de primeira linha por apenas:500 reais <p>
-   <p>tenis de segunda linha por apenas : 230 reais<p>
-   <p>e comprando qualquer uma dessas roupas ou tenis<p>
-   <p>damos ate 5 porcento de desconto <p>
+<p>Na nossa loja temos otimos proficionais desde vendedores de tenis até de roupas.</p>
+<p>temos os melhores preços dependendo do valor da compra damos até 8 porcento de desconto.</p>
+  <h2>beneficios </h2>
+  temos camisetas de primeira linha por : 150 reais
+   camisa de segunda linha por:60 reais 
+   shorts de primeira linha por: 120 reais 
+   shorts de sgunda linha por: 50 reais
+   tenis de primeira linha por apenas:500 reais 
+   tenis de segunda linha por apenas : 230 reais
+   e comprando qualquer uma dessas roupas ou tenis
+   damos ate 5 porcento de desconto 
