--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
  <h1><i>oakley<i></h1>
 <p>Na nossa loja temos otimos proficionais desde vendedores de tenis até de roupas.</p>
 <p>temos os melhores preços dependendo do valor da compra damos até 8 porcento de desconto.</p>
-  <h2>beneficios </h2>
+  <h2><i>beneficios <i></h2>
   temos camisetas de primeira linha por : 150 reais
    camisa de segunda linha por:60 reais 
    shorts de primeira linha por: 120 reais 
