--- a/index.html
+++ b/index.html
@@ -14,11 +14,13 @@
 <p>Na nossa loja temos otimos proficionais desde vendedores de tenis até de roupas.</p>
 <p>temos os melhores preços dependendo do valor da compra damos até 8 porcento de desconto.</p>
   <h2><i>beneficios <i></h2>
-  temos camisetas de primeira linha por : 150 reais
-   camisa de segunda linha por:60 reais 
-   shorts de primeira linha por: 120 reais 
-   shorts de sgunda linha por: 50 reais
-   tenis de primeira linha por apenas:500 reais 
-   tenis de segunda linha por apenas : 230 reais
-   e comprando qualquer uma dessas roupas ou tenis
-   damos ate 5 porcento de desconto 
+    <ul>
+  Temos camisetas de primeira linha por : 150 reais
+   Camisa de segunda linha por:60 reais 
+   Shorts de primeira linha por: 120 reais 
+   Shorts de sgunda linha por: 50 reais
+   Tenis de primeira linha por apenas:500 reais 
+   Tenis de segunda linha por apenas : 230 reais
+   E comprando qualquer uma dessas roupas ou tenis
+   Damos ate 5 porcento de desconto 
+     </ul>
