--- a/index.html
+++ b/index.html
@@ -12,15 +12,15 @@
   <p>Na nossa loja temos otimos proficionais desde vendedores de tenis até de roupas.</p>
   <p>temos os melhores preços dependendo do valor da compra damos até 8 porcento de desconto.</p>
     <h2><i>beneficios <i></h2>
-      
-    Temos camisetas de primeira linha por : 150 reais
-     Camisa de segunda linha por:60 reais 
-     Shorts de primeira linha por: 120 reais 
-     Shorts de sgunda linha por: 50 reais
-     Tenis de primeira linha por apenas:500 reais 
-     Tenis de segunda linha por apenas : 230 reais
-     E comprando qualquer uma dessas roupas ou tenis
-     Damos ate 5 porcento de desconto 
+   <ul>
+   <li class="itens"> Temos camisetas de primeira linha por : 150 reais </li>
+     <li class="itens" >de segunda linha por:60 reais </li>
+    <li class="itens"> Shorts de primeira linha por: 120 reais </li>
+    <li class="itens">Shorts de sgunda linha por: 50 reais</li>
+     <li class="itens ">Tenis de primeira linha por apenas:500 reais </li>
+     <li class = "itens">Tenis de segunda linha por apenas : 230 reais</li>
+     <li class = " itens" >E comprando qualquer uma dessas roupas ou tenis</li>
+     <li class = "itens" >Damos ate 5 porcento de desconto </li>
  </body>
  </html>
 
