--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
  <body>
    
  <h1><i>oakley<i></h1>
+  <img src="" alt="">
   <p>Na nossa loja temos otimos proficionais desde vendedores de tenis até de roupas.</p>
   <p>temos os melhores preços dependendo do valor da compra damos até 8 porcento de desconto.</p>
     <h2><i>beneficios <i></h2>
