--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
    
  <h1><i>oakley<i></h1>
   
-  <img src="8.png" class="8.png"
+  <img src="8.png" alt="">
 
   <p>Na nossa loja temos otimos proficionais desde vendedores de tenis até de roupas.</p>
   <p>temos os melhores preços dependendo do valor da compra damos até 8 porcento de desconto.</p>
